Fixing button issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			Wybierz zasilacz:
 		</div >
 		<div class="powerManagementWireContainer" >
-			<div class="installationContainer" >
+			<div class="installationContainer" id="installationContainer" >
 				
 			</div >
 		</div >
