--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
 <head >
 	<meta charset="utf-8" >
 	<title >Power Management</title >
-	<script src="./js/data/Installation.js" type="text/javascript" ></script >
-	                                            	
+	<link href="css/index.css" rel="stylesheet" >
+	<link href="css/psustyles.css" rel="stylesheet" >
+	<link href="css/installationsegment.css" rel="stylesheet" >
+
+	<script src="js/data/models.js" type="text/javascript" ></script >
 	<script src="./js/cable.js" type="text/javascript" ></script >
 	<script src="./js/device.js" type="text/javascript" ></script >
-	<script src="js/button.js" type="text/javascript" ></script >
-	<script src="js/select.js" type="text/javascript" ></script >
-	<script src="js/input.js" type="text/javascript" ></script >
+	<script src="./js/button.js" type="text/javascript" ></script >
+	<script src="./js/select.js" type="text/javascript" ></script >
+	<script src="./js/picture.js" type="text/javascript" ></script >
+	<script src="./js/input.js" type="text/javascript" ></script >
 	<script src="./js/checkbox.js" type="text/javascript" ></script >
 	<script src="./js/index.js" type="text/javascript" ></script >
+	<script src="./js/data/analysisEngine.js" ></script >
 
 </head >
 
 <body >
 	<div class="powerManagementContainer" >
-		<div class="PowerSupplySegmentContainer" >
-			Wybierz zasilacz:
+		<div class="powerSupplySegmentContainer" >
 		</div >
-		<div class="powerManagementWireContainer" >
+		<div class="powerManagementInstallationContainer" >
 			<div class="installationContainer" id="installationContainer" >
-				
 			</div >
 		</div >
 	</div >
-
 </body >
 
 </html >
