--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head >
 	<meta charset="utf-8" >
 	<title >Power Management</title >
-	<link href="css/index.css" rel="stylesheet" >
-	<link href="css/psustyles.css" rel="stylesheet" >
-	<link href="css/installationsegment.css" rel="stylesheet" >
+	<link href="./css/index.css" rel="stylesheet" type="text/css" />
+	<link href="./css/psustyles.css" rel="stylesheet" type="text/css" />
+	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css" />
 
-	<script src="js/data/models.js" type="text/javascript" ></script >
+	<script src="models.js" type="text/javascript" ></script >
 	<script src="./js/cable.js" type="text/javascript" ></script >
 	<script src="./js/device.js" type="text/javascript" ></script >
 	<script src="./js/button.js" type="text/javascript" ></script >
@@ -17,7 +17,7 @@
 	<script src="./js/input.js" type="text/javascript" ></script >
 	<script src="./js/checkbox.js" type="text/javascript" ></script >
 	<script src="./js/index.js" type="text/javascript" ></script >
-	<script src="./js/data/analysisEngine.js" ></script >
+	<script src="analysisEngine.js" ></script >
 
 </head >
 
