--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="./css/psustyles.css" rel="stylesheet" type="text/css" />
 	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css" />
 
-	<script src="models.js" type="text/javascript" ></script >
+	<script src="./AnalysisEngine/models.js" type="text/javascript" ></script >
 	<script src="./js/cable.js" type="text/javascript" ></script >
 	<script src="./js/device.js" type="text/javascript" ></script >
 	<script src="./js/button.js" type="text/javascript" ></script >
@@ -17,7 +17,7 @@
 	<script src="./js/input.js" type="text/javascript" ></script >
 	<script src="./js/checkbox.js" type="text/javascript" ></script >
 	<script src="./js/index.js" type="text/javascript" ></script >
-	<script src="analysisEngine.js" ></script >
+	<script src="./AnalysisEngine/analysisEngine.js" ></script >
 
 </head >
 
