Adding panel to display information about system

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head >
 	<meta charset="utf-8" >
 	<title >Power Management</title >
-	<link href="./css/index.css" rel="stylesheet" type="text/css" />
+	<link href="./css/index.css" rel="stylesheet" type="text/css" />                                                
 	<link href="./css/psustyles.css" rel="stylesheet" type="text/css" />
 	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css" />
 
@@ -24,7 +24,7 @@
 	<div class="powerManagementContainer" >                             
 		<div class="powerSupplySegmentContainer" >
 		</div >
-		<div class="powerManagementInstallationContainer" >
+		<div class="powerManagementInstallationContainer" id="powerManagementInstallationContainer" >
 			<div class="installationContainer" id="installationContainer" >
 			</div >
 		</div >
