--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 	<script src="./js/index.js" type="text/javascript" ></script >
 	<script src="./AnalysisEngine/analysisEngine.js" ></script >
 </head >
-
+                                 
 <body id="body">
-	<div class="powerManagementContainer" >                             
-		<div class="powerSupplySegmentContainer" >
-		</div >
+	<div class="powerManagementContainer" id="powerManagementContainer">
 		<div class="powerManagementInstallationContainer" id="powerManagementInstallationContainer" >
 			<div class="installationContainer" id="installationContainer" >
 			</div >
