--- a/AnalysisEngine/index.html
+++ b/AnalysisEngine/index.html
@@ -20,7 +20,7 @@
 </html>
 
 <script>
-	$(document).ready(function(){
+	document.addEventListener('DOMContentLoaded', function () {
 		runTests();
-	});
+});
 </script>
