Redesigning page according to client requirements

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 	<script src="./AnalysisEngine/analysisEngine.js" ></script >
 </head >
                                  
-<body id="body">
-	<div class="powerManagementContainer" id="powerManagementContainer">
+<body id="body" >
+	<div class="systemStatus" >
+		<p class="systemStatusText"></p >
+	</div >
+	<div class="powerManagementContainer" id="powerManagementContainer" >
 		<div class="powerManagementInstallationContainer" id="powerManagementInstallationContainer" >
 			<div class="installationContainer" id="installationContainer" >
 			</div >
