fixing some styles, adding step to input, added save to file functionality, drag-and-drop as well ( with bug )

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 	<script src="./js/input.js" type="text/javascript" ></script >
 	<script src="./js/checkbox.js" type="text/javascript" ></script >
 	<script src="./js/index.js" type="text/javascript" ></script >
+	<script src="./js/fileSave.js" type="text/javascript"></script>
 	<script src="./AnalysisEngine/analysisEngine.js" ></script >
 </head >
                                  
 <body id="body" >
 	<div class="systemStatus" >
 		<p class="systemStatusText"></p >
+		<p class="popup"></p >
 	</div >
 	<div class="powerManagementContainer" id="powerManagementContainer" >
 		<div class="powerManagementInstallationContainer" id="powerManagementInstallationContainer" >
