adding new segment to allow user to configure many segments at the same time, fixing issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>Power Management</title>
 	<!-- <link href="./css/index.css" rel="stylesheet" type="text/css"></link>
 	<link href="./css/psustyles.css" rel="stylesheet" type="text/css"></link>
-	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css"></link> -->
+	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css"
+	</link>>-->
 	<link href="./cssConcept/index.css" rel="stylesheet" type="text/css">
 	</link>
 	<link href="./cssConcept/informationPanels.css" rel="stylesheet" type="text/css">
@@ -65,7 +66,7 @@
 					<div class="wireTypeSelect"></div>
 				</div>
 				<div class="wireLength">
-					<p>Odległość do zasilacza</p>		
+					<p>Odległość do zasilacza</p>
 					<div class="wireLengthInput">
 						<label for="wireDistance"></label>
 						<input type="number" name="wireDistance" id="wireDistance">
@@ -94,7 +95,7 @@
 				<h3>Podgląd systemu</h3>
 			</div>
 			<div class="installationView">
-				
+
 				<div></div>
 			</div>
 			<div class="installation">
@@ -109,11 +110,31 @@
 				<input type="number" class="counterBox" />
 			</div>
 		</div>
-		<div class="segmentConfiguration panelStyle">
-			<div class="panelInfo">
-				<h3>Lista segmentów</h3>
+		<div class="systemConfiguration">
+			<div class="segmentConfiguration panelStyle active">
+				<div class="panelInfo">
+					<h3>Lista segmentów</h3>
+					<div class="arrowContainer">
+						<div class="configureManySegmentsArrow"></div>
+					</div>
+				</div>
+				<div class="segmentListContainer">
+				</div>
 			</div>
-			<div class="segmentListContainer">
+			<div class="configureManySegments panelStyle">
+				<div class="panelInfo">
+					<h3>Skonfiguruj wiele</h3>
+					<div class="arrowContainer">
+						<div class="configureManySegmentsArrow"></div>
+					</div>
+				</div>
+				<div class="container">
+					<div>DFGDGFSSFDGFDGGFDFGDFDGGDFSDGFSGFD</div>
+					<div>gdfgfd</div>
+					<div>hfghfgfhg</div>
+					<div>hgfhgf</div>
+					<div>hfghfghgf</div>
+				</div>
 			</div>
 		</div>
 	</div>
