adding segment, fixing issues

--- a/index.html
+++ b/index.html
@@ -123,17 +123,36 @@
 			</div>
 			<div class="configureManySegments panelStyle">
 				<div class="panelInfo">
-					<h3>Skonfiguruj wiele</h3>
+					<h3>Skonfiguruj wiele segmentów</h3>
 					<div class="arrowContainer">
 						<div class="configureManySegmentsArrow"></div>
 					</div>
 				</div>
-				<div class="container">
-					<div>DFGDGFSSFDGFDGGFDFGDFDGGDFSDGFSGFD</div>
-					<div>gdfgfd</div>
-					<div>hfghfgfhg</div>
-					<div>hgfhgf</div>
-					<div>hfghfghgf</div>
+				<div class="configureMany">
+					<form class="changesForm">
+						<div class="rangeOfChanges">
+							<label for="range">Wprowadź zares zmian</label>
+							<input type="text" step="1" id="range" class="range" name="range" placeholder="Urządzenia np. 1-15,23,45"/>
+						</div>
+						<div class="changeManyDevices">
+							<div class="changeManyDevicesDesc">
+								Rodzaj urządzenia
+							</div>
+						</div>
+						<div class="changeManyWiresType">
+							<div class="changeManyWiresTypeDesc">
+								Przekrój kabla
+							</div>
+						</div>
+						<div class="changeManyWiresLength">
+							<div class="changeWiresLengthDesc">
+								Długość kabla
+							</div>
+						</div>
+						<div class="updateManySegmentsData">
+							<button type="submit" class="submitChanges">Akceptuj</button>
+						  </div>
+					</form>
 				</div>
 			</div>
 		</div>
