--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="counter">
+		<!-- <div class="counter">
 			<div class="inputContainer">
 				<input type="number" class="counterBox" />
 			</div>
-		</div>
+		</div> -->
 		<div class="systemConfiguration">
 			<div class="segmentConfiguration panelStyle active">
 				<div class="panelInfo">
@@ -160,9 +160,7 @@
 
 	<script src="./AnalysisEngine/models.js"></script>
 	<script src="./js/cable.js" type="text/javascript"></script>
-	<!-- <script src="./js/ControlUnit.js" type="text/javascript"></script> -->
 	<script src="./js/device.js" type="text/javascript"></script>
-	<!-- <script src="./js/bus.js" type="text/javascript"></script> -->
 	<script src="./js/button.js" type="text/javascript"></script>
 	<script src="./js/select.js" type="text/javascript"></script>
 	<script src="./js/picture.js" type="text/javascript"></script>
