--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
 	</div>
 
 	<script src="./AnalysisEngine/models.js"></script>
-	<script src="./js/cable.js" type="text/javascript"></script>
-	<script src="./js/device.js" type="text/javascript"></script>
+	<script src="./js/segment.js" type="text/javascript"></script>
 	<script src="./js/button.js" type="text/javascript"></script>
 	<script src="./js/select.js" type="text/javascript"></script>
 	<script src="./js/picture.js" type="text/javascript"></script>
