testing list of devices

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<title>Power Management</title>
-	<!-- <link href="./css/index.css" rel="stylesheet" type="text/css"></link>
-	<link href="./css/psustyles.css" rel="stylesheet" type="text/css"></link>
-	<link href="./css/installationsegment.css" rel="stylesheet" type="text/css"
-	</link>>-->
 	<link href="./cssConcept/index.css" rel="stylesheet" type="text/css">
 	</link>
 	<link href="./cssConcept/system.css" rel="stylesheet" type="text/css">
@@ -15,6 +11,8 @@
 	<link href="./cssConcept/systemPreview.css" rel="stylesheet" type="text/css">
 	</link>
 	<link href="./cssConcept/files.css" rel="stylesheet" type="text/css">
+	</link>
+	<link href="./cssConcept/usedDevices.css" rel="stylesheet" type="text/css">
 	</link>
 	<link href='https://fonts.googleapis.com/css?family=Spartan' rel='stylesheet'>
 	</link>
@@ -225,7 +223,21 @@
 				Zastosowane urządzenia
 			</h3>
 			<div class="usedDevicesContainer">
+				<div class="usedDeviceItem">
+					<div class="usedDeviceName">
+						<p></p>
+					</div>
+					<div class="usedDeviceGasDetected">
+						<p></p>
+					</div>
+					<div class="usedDeviceDocs">
+						<p class="usedDeviceDocsParagraph">
 
+						</p>
+					</div>
+					<a href="" alt="unable to find image" class="usedDeviceDocsAnchor">Dokumentacja techniczna</a>
+				</div>
+				<div class="usedDeviceDivider"></div>
 			</div>
 		</div>
 	</div>
