--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 	</link>
 	<link href="./cssConcept/usedDevices.css" rel="stylesheet" type="text/css">
 	</link>
-	<link href='https://fonts.googleapis.com/css?family=Spartan' rel='stylesheet'>
-	<link
-		href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,400,300,700,600&amp;subset=latin,latin-ext"
-		rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Spartan' rel="stylesheet" type="text/css">
 	</link>
 
 </head>
