--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</link>
 	<link href="./cssConcept/usedDevices.css" rel="stylesheet" type="text/css">
 	</link>
-	<link href='https://fonts.googleapis.com/css?family=Spartan' rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Spartan' rel='stylesheet'>
 	</link>
 
 </head>
@@ -254,6 +254,7 @@
 	<script src="js/index.js" type="text/javascript"></script>
 	<script src="js/select.js" type="text/javascript"></script>
 	<script src="js/system.js" type="text/javascript"></script>
+	<script src="js/file.js" type="text/javascript"></script>
 </body>
 
 </html>
