Fixing bugs related to adding/removing segment, updating list of devices, system state

--- a/index.html
+++ b/index.html
@@ -227,25 +227,27 @@
 				Zastosowane urządzenia
 			</h3>
 			<div class="usedDevicesContainer">
-				<div class="usedDeviceItem">
-					<div class="usedDeviceName">
-						<p></p>
-					</div>
-					<div class="usedDeviceGasDetected">
-						<p></p>
-					</div>
-					<div class="usedDeviceDocs">
-						<p class="usedDeviceDocsParagraph">
-							<a href="" alt="unable to find image" class="usedDeviceDocsAnchor">Dokumentacja
-								techniczna</a>
-						</p>
-					</div>
-					<div class="usedDeviceImageContainer">
-						<img />
-					</div>
+				<div class="usedDevicePair">
+					<div class="usedDeviceItem">
+						<div class="usedDeviceName">
+							<p></p>
+						</div>
+						<div class="usedDeviceGasDetected">
+							<p></p>
+						</div>
+						<div class="usedDeviceDocs">
+							<p class="usedDeviceDocsParagraph">
+								<a href="" alt="unable to find image" class="usedDeviceDocsAnchor">Dokumentacja
+									techniczna</a>
+							</p>
+						</div>
+						<div class="usedDeviceImageContainer">
+							<img />
+						</div>
 
+					</div>
+					<div class="usedDeviceDivider"></div>
 				</div>
-				<div class="usedDeviceDivider"></div>
 			</div>
 		</div>
 	</div>
