--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 			<div class="dragNDropArea">
 				Upuść plik aby wczytać wcześniej zapisany system
 			</div>
-			<button class="dragNDropSubmit">Wybierz plik</button>
+			<label for="readFileInput">Wczytaj plik</label>
+			<input class="dragNDropSubmit" id="readFileInput" type="file" title=" agdgadags" />
 		</div>
 	</div>
 
