Pushing update with load file button working

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
 			<div class="filesContainer">
 				<div class="saveSystem">
 					<img src="./SVG/save.svg" alt="unable to find image">
-					<button>Zachowaj system</button>
+					<button class="systemSketch">Zachowaj system</button>
 				</div>
 				<div class="setOfDevices">
 					<img src="./SVG/save.svg" alt="unable to find image">
-					<button>Zestawienie urządzeń</button>
+					<button class="systemRecord">Zestawienie urządzeń</button>
 
 				</div>
 			</div>
