--- a/index.html
+++ b/index.html
@@ -57,35 +57,33 @@
 							<div class="inputContainer">
 								<input type="number" max="50" min="1" class="detectorAmounts"
 									name="amountOfDetectors" />
-								<span class="amountUnit">Szt.</span>
-								<span class="shadedAmount">
-									(max 50szt.)
-								</span>
+								<span class="amountUnit">szt.</span>
+								<span class="shadedAmount">(max 50 szt.)</span>
 							</div>
 
 						</div>
-						<span class="buildingInformation">i</span>
+						<span data-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum" class="buildingInformation tooltip">i</span>
 						<div class="buildingType">
 							<div class="structure">Rodzaj obiektu</div>
 							<select class="structureSelect" name="structureType">
 
 							</select>
 						</div>
-						<span class="detectedGasInformation">i</span>
+						<span data-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum" class="detectedGasInformation tooltip">i</span>
 						<div class="detectedGas">
-							<div class="gas">Wykrywany Gaz</div>
+							<div class="gas">Wykrywany gaz</div>
 							<select class="gasSelect" name="gasDetected">
 
 							</select>
 						</div>
-						<span class="batteryBackUpInformation">i</span>
+						<span data-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum" class="batteryBackUpInformation tooltip">i</span>
 						<div class="batteryBackUp">
 							<div class="battery">Akumulatorowe podtrzymanie pracy</div>
 							<select class="batterySelect" name="batteryBackUp">
 
 							</select>
 						</div>
-						<span class="wireLengthInformation">i</span>
+						<span data-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum" class="wireLengthInformation tooltip">i</span>
 						<div class="wireLengthContainer">
 							<div class="wireLength">Orientacyjna odległość między urządzeniami</div>
 							<input min="1" max="999" class="wireLengthInput" name="EWL" /> m
