--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	<script src="./AnalysisEngine/models.js"></script>
 	<script src="js/index.js" type="text/javascript"></script>
 	<script src="js/helpers.js" type="text/javascript"></script>
-	<script src="js/select.js" type="text/javascript"></script>
+	<script src="js/form.js" type="text/javascript"></script>
 	<script src="js/system.js" type="text/javascript"></script>
 	<script src="js/file.js" type="text/javascript"></script>
 </body>
