Fixing display bugs showing after submitting form more than once.

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 					<p class="controlUnitHeader">JEDNOSTKA STERUJĄCA</p>
 					<p class="busLengthDescription">Długość magistrali</p>
 					<p class="systemPowerConsumption">Pobór mocy</p>
-					<p class="busLength"></p>
-					<p class="powerConsumption"></p>
+					<p id="busLength" class="busLength"></p>
+					<p id="powerConsumption" class="powerConsumption"></p>
 				</div>
 				<div class="divider"></div>
 				<div class="powerSupplyContainer">
