Refactoring code responsible for system's state data generation.

--- a/index.html
+++ b/index.html
@@ -134,31 +134,31 @@
 			<div class="systemPreviewContainer">
 				<div class="devices">
 					<p class="deviceListHeader">CZUJNIKI GAZU</p>
-					<div class="detectorListContainer">
-						<ol class="detectorTypes"></ol>
+					<div class="detectorsListContainer">
+						<ol id="detectorsTypesList" class="detectorTypes"></ol>
 					</div>
 					<div class="deviceAmounts">
-						<ol class="detectorTypesAmounts"></ol>
+						<ol id="detectorsQuantityList" class="detectorTypesAmounts"></ol>
 					</div>
 				</div>
 				<div class="divider"></div>
 				<div class="signallers">
 					<p class="signallerListHeader">SYGNALIZATORY</p>
 					<div class="signallerListContainer">
-						<ol class="signallerTypes"></ol>
+						<ol id="signallersTypesList" class="signallerTypes"></ol>
 					</div>
 					<div class="signallerAmounts">
-						<ol class="signallerTypesAmounts"></ol>
+						<ol id="signallersQuantityList" class="signallerTypesAmounts"></ol>
 					</div>
 				</div>
 				<div class="divider"></div>
 				<div class="accessories">
 					<p class="accessoriesListHeader">AKCESORIA</p>
 					<div class="accessoriesListContainer">
-						<ol class="accessoriesTypes"></ol>
+						<ol id="accessoriesList" class="accessoriesTypes"></ol>
 					</div>
 					<div class="accessoriesAmounts">
-						<ol class="accessoriesTypesAmounts"></ol>
+						<ol id="accessoriesQuantityList" class="accessoriesTypesAmounts"></ol>
 					</div>
 				</div>
 				<div class="divider"></div>
