Refactoring code responsible for creating system's used devices panel.

--- a/index.html
+++ b/index.html
@@ -222,10 +222,8 @@
 			</div>
 		</div>
 		<div class="usedDevices panelStyle">
-			<h3 class="systemHeader">
-				Zastosowane urządzenia
-			</h3>
-			<div class="usedDevicesContainer">
+			<h3 class="systemHeader">Zastosowane urządzenia</h3>
+			<div id="usedDevicesContainer" class="usedDevicesContainer">
 				<div class="usedDevicePair">
 					<div class="usedDeviceItem">
 						<div class="usedDeviceName">
@@ -236,8 +234,7 @@
 						</div>
 						<div class="usedDeviceDocs">
 							<p class="usedDeviceDocsParagraph">
-								<a href="" alt="unable to find image" class="usedDeviceDocsAnchor">Dokumentacja
-									techniczna</a>
+								<a href="" alt="unable to find image" class="usedDeviceDocsAnchor">Dokumentacja techniczna</a>
 							</p>
 						</div>
 						<div class="usedDeviceImageContainer">
