Implementing function responsible for detecting and handling segment duplication button click event. Final code organization in system.js file.

--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
 			<h3 class="systemHeader">Plik</h3>
 			<div class="filesContainer">
 				<div class="saveSystem">
-					<img src="./SVG/save.svg" alt="unable to find image">
-					<button class="systemSketch">Zachowaj system</button>
+					<img src="./SVG/save.svg" alt="Export to CSV">
+					<button id="exportToCSV">Zachowaj system</button>
 				</div>
 				<div class="setOfDevices">
-					<img src="./SVG/save.svg" alt="unable to find image">
-					<button class="systemRecord">Zestawienie urządzeń</button>
+					<img src="./SVG/save.svg" alt="Export to JSON">
+					<button id="exportToJSON">Zestawienie urządzeń</button>
 
 				</div>
 			</div>
