Implementing code responsible for handling JSON file from drop area and input; converting JSON to an object and loading the system.

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				ondrop="handleDropFile(event);"
 				ondragover="handleDragOver(event);"
 				>Upuść plik aby wczytać wcześniej zapisany system</div>
-			<!-- <label for="readFileInput">Wczytaj plik</label> -->
-			<!-- <input class="dragNDropSubmit" id="readFileInput" type="file" title=" agdgadags" /> -->
+			<label for="readFileInput">Wczytaj plik</label>
+			<input class="dragNDropSubmit" id="readFileInput" type="file" accept=".json" onchange="handleInputLoadFile(event);"/>
 		</div>
 	</div>
 	<div class="system" id="system">
