Finalizing code responsible for application's logic.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="body">
 	<header id="top">
 		<div id="headerContainer">
-			<h2 id="configuratorInfo">Konfigurator Systemu TetaGas</h2>
+			<h2 id="configuratorInfo">Konfigurator Systemu <span class="hightlighted">Teta</span>span>Gas</h2>
 		</div>
 		<div id="headerRevision">
 			<p id="configuratorRevision">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum.</p>
@@ -179,15 +179,11 @@
 				<div class="systemPreviewControlUnit">
 					<img src="./SVG/controlUnit.svg" alt="unable to find image" />
 				</div>
-				<div id="systemDiagram" class="systemDiagram">
-
-				</div>
+				<div id="systemDiagram" class="systemDiagram"></div>
 			</div>
 			<div class="systemActions">
 				<h3 class="systemHeader">Działania</h3>
-				<div id="actionsList" class="actionsList">
-
-				</div>
+				<div id="actionsList" class="actionsList"></div>
 			</div>
 		</div>
 		<div class="systemFiles panelStyle">
