Fixing page header section design

--- a/index.html
+++ b/index.html
@@ -15,27 +15,16 @@
 
 <body id="body">
 	<header id="top">
-		<div id="headerContainer">
-			<h2 id="configuratorInfo">Konfigurator Systemu <span class="hightlighted">Teta</span> Gas</h2>
+		<div id="configuratorInfo">
+			<h2 id="configuratorTitle">Konfigurator Systemu <span><span>Teta</span> Gas</span></h2>
+			<p id="configuratorDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum.</p>
 		</div>
-		<div id="headerRevision">
-			<p id="configuratorRevision">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum.</p>
-		</div>
-		<div class="languageVersions">
-			<button class="polishVersion">
-				<div class="polishVersionContainer">
-					<b>PL</b>
-				</div>
-			</button>
-			/
-			<button class="englishVersion">
-				<div class="englishVersionContainer">
-					<b>ENG</b>
-				</div>
-			</button>
-		</div>
-		<div id="logoImgContainer">
-			<img alt="Unable to find image" id="headerImage" src="./Icons/agLogo.png" />
+		<div class="configuratorLogo">
+			<img alt="Configurator logo image" id="configuratorLogoImage" src="./Icons/agLogo.png" />
+			<div id="configuratorLanguage">
+				<a href="/?lang=PL" class="langLink">PL</a>/
+				<a href="/?lang=EN" class="langLink">EN</a>
+			</div>
 		</div>
 	</header>
 	<div class="appEntry">
