Fixing used devices panel design.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				<div class="panelHeaderContainer">
 					<h3>Zastosowane urządzenia</h3>
 				</div>
-				<div id="usedDevicesContainer" class="usedDevicesContainer"></div>
+				<div id="usedDevicesContainer" class="panelContentContainer"></div>
 			</div>
 		</div>
 	</div>
