Finishing system's state status panel redesign.

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 					<div class="systemStatusStateContainer">
 						<div class="systemStatusState">Status systemu</div>
 						<div class="systemStatusActionsContainer">
-							<button class="systemOutput">OK</button>
-							<button class="optimizeSystem">Optymalizuj</button>
+							<button id="systemOutput" class="systemOutput">OK</button>
+							<button id="optimizeSystem" class="optimizeSystem">Optymalizuj</button>
 						</div>
 					</div>
 				</div>
