--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>Power Management</title>
 	<link href="./cssConcept/fonts.css" rel="stylesheet" type="text/css"/>
 	<link href="./cssConcept/index.css" rel="stylesheet" type="text/css"/>
