Adding mobile and desktop navigation menu.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 			<h2 id="configuratorTitle">Konfigurator Systemu <span><span>Teta</span> Gas</span></h2>
 			<p id="configuratorDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porta acelitquis rutrum.</p>
 		</div>
+		<nav id="configuratorNav">
+			<ul class="configuratorNavList">
+				<li class="configuratorNavItem"><a href="https://doc.atestgaz.pl/AG/POD/POD-047-PLWydruk.pdf">Przewodnik Teta Gas</a></li>
+				<li class="configuratorNavItem"><a href="https://doc.atestgaz.pl/AG/PROJ/PROJ-LIB-037.dwg">Schematy DWG dla projektanta</a></li>
+				<li class="configuratorNavItem"><a href="https://www.atestgaz.pl/kontakt-3">Kontakt</a></li>
+				<li class="configuratorNavItem"><a href="https://shop.atestgaz.com/teta-gas-adresowalny/49">Sklep</a></li>
+			</ul>
+		</nav>
 		<div class="configuratorLogo">
 			<img alt="Configurator logo image" id="configuratorLogoImage" src="./Icons/agLogo.png" />
 			<div id="configuratorLanguage">
@@ -194,6 +202,17 @@
 			</div>
 		</div>
 	</div>
+	<nav id="configuratorNavMobile">
+		<ul class="configuratorNavList">
+			<li class="configuratorNavItem"><a href="https://doc.atestgaz.pl/AG/POD/POD-047-PLWydruk.pdf">Przewodnik Teta Gas</a></li>
+			<li class="configuratorNavItem"><a href="https://doc.atestgaz.pl/AG/PROJ/PROJ-LIB-037.dwg">Schematy DWG dla projektanta</a></li>
+			<li class="configuratorNavItem"><a href="https://www.atestgaz.pl/kontakt-3">Kontakt</a></li>
+			<li class="configuratorNavItem"><a href="https://shop.atestgaz.com/teta-gas-adresowalny/49">Sklep</a></li>
+		</ul>
+	</nav>
+	<button id="navMobileActivationBtn">
+		<i class="navMobileActivationBtnIcon"></i>
+	</button>
 
 	<script src="./AnalysisEngine/models.js"></script>
 	<script src="js/index.js" type="text/javascript"></script>
