Implementing system's Operation Panel component functionality. Code refactoring and functions' description fixes.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 						<br>
 						<input type="number" min="1" value="15" id="operationsSegmentWireLengthInput" class="operationsSegmentWireLengthInput"> m
 					</div>
-					<button class="formButton">Wykonaj <span>▶</span></button>
+					<button class="formButton" id="operationsBtn">Wykonaj <span>▶</span></button>
 				</div>
 			</div>
 			<div class="usedDevices panelContainer">
