Making system's Operation Panel component button disabled as default.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<div class="systemStatusState">Status systemu</div>
 						<div class="systemStatusActionsContainer">
 							<button id="systemOutput" class="systemOutput">OK</button>
-							<button id="optimizeSystem" class="optimizeSystem">Optymalizuj</button>
+							<button id="optimizeSystem" class="optimizeSystem" disabled>Optymalizuj</button>
 						</div>
 					</div>
 				</div>
@@ -231,7 +231,7 @@
 						<br>
 						<input type="number" min="1" value="15" id="operationsSegmentWireLengthInput" class="operationsSegmentWireLengthInput"> m
 					</div>
-					<button class="formButton" id="operationsBtn">Wykonaj <span>▶</span></button>
+					<button class="formButton" id="operationsBtn" disabled>Wykonaj <span>▶</span></button>
 				</div>
 			</div>
 			<div class="usedDevices panelContainer">
