Fixing buttons responsible for downloading CSV and JSON files.

--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
 				</div>
 				<div class="panelContentContainer">
 					<div class="saveSystem fileButton">
-						<img src="./SVG/save.svg" alt="Export to CSV">
-						<button id="exportToCSV">Zapisz system</button>
+						<img src="./SVG/save.svg" alt="Export to JSON">
+						<button id="exportToJSON">Zapisz system</button>
 					</div>
 					<div class="setOfDevices fileButton">
-						<img src="./SVG/save.svg" alt="Export to JSON">
-						<button id="exportToJSON">Pobierz zestawienie urządzeń</button>
+						<img src="./SVG/save.svg" alt="Export to CSV">
+						<button id="exportToCSV">Pobierz zestawienie urządzeń</button>
 					</div>
 				</div>
 			</div>
